# evolution

./: .gitignore  .gitmodules  meson.build
src/: main.cpp  meson.build
src/camera/: camera.cpp  camera.hpp
src/creature/: creature.cpp  creature.hpp
src/plant/: plant.cpp  plant.hpp
src/simulation/: simulation.cpp  simulation.hpp
src/simulation/stats/: stats.hpp
src/simulation/ui/: controls.cpp  selected_creature.cpp  stats.cpp
src/util/: util.cpp  util.hpp
src/world/: world.cpp  world.hpp
subprojects/imgui/: meson.build
subprojects/implot/: meson.build
subprojects/rlImGui/: meson.build
